<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="cmput301f17t12.quirks.Activities.TradeActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/top_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:itemBackground="@color/backgroundaccent"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/socialtab" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/navigation" >
    </android.support.design.widget.BottomNavigationView>

    <TextView
        android:id="@+id/tradetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/top_navigation"
        android:text="Trade Collectibles"
        android:textColor="@color/colorAccent"
        android:textSize="25sp" />


    <LinearLayout
        android:id="@+id/tradestuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@id/bottom_navigation"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/tradebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Request Trade"/>

    </LinearLayout>

        <LinearLayout
            android:layout_below="@id/tradetext"
            android:layout_above="@id/tradestuff"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/collections"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <RelativeLayout
                android:id="@+id/yours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/usernametext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="9dp"
                    android:text="testusername"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/collectiontext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/usernametext"
                    android:layout_marginStart="5dp"
                    android:text="Your collection:"
                    android:textSize="15sp"/>

                <ListView
                    android:divider="@android:color/transparent"
                    android:dividerHeight="5dp"
                    android:id="@+id/yourcollection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/collectiontext"
                    android:layout_marginTop="8dp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_compare_arrows_black_24dp"/>

            <RelativeLayout
                android:id="@+id/theirs"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/collectionspinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/theirusername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/collectionspinner"
                    android:layout_marginStart="5dp"
                    android:text="theirusername"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/collectionspinner"
                    android:layout_toEndOf="@id/theirusername"
                    android:text="'s collection:"
                    android:textSize="15sp"/>

                <ListView
                    android:divider="@android:color/transparent"
                    android:dividerHeight="5dp"
                    android:id="@+id/theircollection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/theirusername"
                    android:layout_marginTop="8dp" />
            </RelativeLayout>

        </LinearLayout>

</RelativeLayout>
