...
                android:textSize="12sp"/>
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/buttonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/buttonDecline"
        android:foregroundGravity="center_vertical"
        android:src="@drawable/ic_check_circle_black_24dp" />

    <ImageButton
        android:id="@+id/buttonDecline"
        android:layout_width="wrap_content"
...
