<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_gravity="center"
    android:background="@color/backgroundlight"
    android:descendantFocusability="blocksDescendants">
    <ImageButton
        android:id="@+id/delete_friend_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/ic_clear_black_24dp" />

    <LinearLayout
        android:id="@+id/headerbar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toStartOf="@id/delete_friend_but"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Friendtext"
            android:layout_width="286dp"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:focusable="false"
            android:text="This is a test"
            android:textSize="16sp" />

    </LinearLayout>



    <ImageView
        android:id="@+id/Friend_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/delete_friend_but"
        app:srcCompat="@drawable/ic_person_outline_black_24dp" />


</RelativeLayout>